--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,17 +1,185 @@
+@import '../../../assets/_mixins.scss';
+
+
+@include font-face("ProximaNova-Regular", "/assets/fonts/ProximaNova-Regular/fonts/");
+@include font-face("ProximaNova-Light", "/assets/fonts/ProximaNova-Light/fonts/");
+@include font-face("ProximaNova-Bold", "/assets/fonts/ProximaNova-Bold/fonts/");
+@include font-face("ProximaNova-Semibold", "/assets/fonts/ProximaNova-Semibold/fonts/");
+
+/*@include font-face("ProximaNova-Regular", font-files("./assets/fonts/ProximaNova-Regular/fonts/ProximaNova-Regular.ttf"));*/
+ /* @include font-face("ProximaNova-Light", font-files("../../assets/fonts/ProximaNova-Light/fonts/ProximaNova-Light.ttf", "/fonts/ProximaNova-Light/fonts/ProximaNova-Light.otf"));
+@include font-face("ProximaNova-Bold", font-files("../../assets/fonts/ProximaNova-Bold/fonts/ProximaNova-Bold.ttf", "/fonts/ProximaNova-Bold/fonts/ProximaNova-Bold.otf"));
+@include font-face("ProximaNova-Semibold", font-files("../../assets/fonts/ProximaNova-Semibold/fonts/ProximaNova-Semibold.ttf", "/fonts/ProximaNova-Semibold/fonts/ProximaNova-Semibold.otf"));
+ */
+::placeholder {
+  color: #f2f2f2;
+  opacity: 0.4;
+}
+
 .container {
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  background: transparent;
+  width: 700px;
+  min-height: 400px;
 
-  background: url(../../../assets/background.jpg) no-repeat center fixed;
-  -webkit-background-size: cover; /* pour anciens Chrome et Safari */
-  background-size: cover; /* version standardisée */
+  .row {
+    .col-md-12 {
+      width: 100%;
+      position: relative;
+      
+    }
 
-  .title {
-    color: white;
-    margin:0;
-    padding:50px 20px;
+    .col-md-7 {
+      position: relative;
+      width: 58%;
+      float: left;
+    }
+
+    .col-md-5 {
+      position: relative;
+      width: 33%;
+      float: left;
+    }
+
+    .col-md-6 {
+      position: relative;
+      width: 50%;
+      float: left;
+    }
+
+    .r-app {
+
+      .search {
+        position: relative;
+        figure {
+          all: unset;
+          position: absolute;
+          top:12px;
+          left: 20px;
+          z-index: 2
+        }
+
+        input {
+          width: 620px;
+          padding-left: 80px;
+          height: 65px;
+          border-radius: 10px;
+          background-color: #358E8A;
+          border: none;
+          font-size: 24px;
+          color: #f2f2f2;
+          position: relative;
+          font-family: "ProximaNova-Semibold";
+          box-shadow: 10px 0px 20px rgba(0, 0, 0, 0.4);
+
+          &:focus {
+            outline: none;
+          }
+        }
+      }
+
+      .result {
+        background-color: #2F4544;
+        position: relative;
+        top:-30px;
+        z-index: -1;
+        padding-top: 60px; 
+        min-height: 300px;
+        .list {
+          position: relative;
+          left: 20px;
+          table {
+            border-right: thin solid #ffffff;
+            width: 100%;
+            thead {
+              font-family: "ProximaNova-Semibold";
+              color: #f2f2f2;
+              font-size: 14px;
+              text-align: left;
+              th {
+                padding: 10px 0px;
+              }
+            }
+
+            tbody {
+              font-size: 18px;
+
+              tr {
+                td {
+                  font-family: "ProximaNova-Light";
+                  color: #f2f2f2;
+                  padding: 10px 0px;
+                  min-width: 30px;
+                  max-width: 200px;
+   
+                  &:nth-child(3) {
+                   font-family: "ProximaNova-Semibold";
+                   white-space: nowrap;
+                   overflow: hidden;
+                   text-overflow: ellipsis;
+                  }
+                 }
+
+                 &:hover {
+                   background:#358E8A;
+                 }
+              }
+            }
+          }
+        }
+  
+        .details {
+          position: relative;
+          left: 50%;
+          margin-left: -43%;
+          top: 30px;
+          .profile {
+            display: flex;
+            align-items: center;
+            figure{
+              all: initial;
+              width: 50px;
+              height: 50px;
+              display: inline-block;
+              img {
+                width: inherit;
+                border-radius: 50%;
+                outline: 0;
+                -o-object-fit: cover;
+                object-fit: cover;
+              }
+            }
+            h3 {
+              all: initial;
+              margin: 0 20px;
+              font-family: "ProximaNova-Semibold";
+              font-size: 18px;
+              color: #f2f2f2;
+            }
+          }
+  
+          .info {
+            font-size: 14px;
+            color: #f2f2f2;
+            font-family: "ProximaNova-Light";
+
+            ul {
+              list-style: none;
+              -webkit-padding-start: 10px;
+              padding-top: 20px;
+              li {
+                padding: 7px;
+
+                i {
+                  color: #F6D7A1;
+                  font-size: 16px;
+                  margin: 0 10px 0 0;
+                }
+              }
+            }
+          }
+        }
+
+      }
+    }
   }
-
 }
