--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -16,6 +16,34 @@
   opacity: 0.4;
 }
 
+#style-7::-webkit-scrollbar-track
+{
+	// -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	background-color: transparent;
+	border-radius: 4px;
+}
+
+#style-7::-webkit-scrollbar
+{
+	width: 4px;
+  background-color:transparent;
+}
+
+#style-7::-webkit-scrollbar-thumb
+{
+	border-radius: 4px;
+	background: #f2f2f2;
+}
+
+.hover {
+  background:#358E8A;
+}
+
+.clearfix {
+  clear: both;
+  float: initial;
+}
+
 .container {
   background: transparent;
   width: 700px;
@@ -23,29 +51,69 @@
   overflow: hidden;
 
   .row {
-    .col-md-12 {
-      width: 100%;
+
+
+    .col-md-1 {
+      width: 10%;
       position: relative;
-      
+      float: left;
     }
 
-    .col-md-7 {
+    .col-md-2 {
+      width: 20%;
       position: relative;
-      width: 58%;
+      float: left;
+    }
+
+    .col-md-3 {
+      width: 30%;
+      position: relative;
+      float: left;
+    }
+
+    .col-md-4 {
+      width: 40%;
+      position: relative;
       float: left;
     }
 
     .col-md-5 {
+      width: 50%;
       position: relative;
-      width: 33%;
       float: left;
     }
 
     .col-md-6 {
+      width: 60%;
       position: relative;
-      width: 50%;
       float: left;
     }
+
+    .col-md-7 {
+      width: 70%;
+      position: relative;
+      float: left;
+      
+    }
+
+    .col-md-8 {
+      position: relative;
+      width: 80%;
+      float: left;
+    }
+
+    .col-md-9 {
+      position: relative;
+      width: 90%;
+      float: left;
+    }
+
+    .col-md-10 {
+      position: relative;
+      width: 100%;
+      float: left;
+    }
+
 
     .r-app {
       position: relative;
@@ -88,30 +156,48 @@
         min-height: 300px;
         .list {
           position: relative;
-          left: 20px;
+          height: 300px;
           table {
-            border-right: thin solid #ffffff;
+            border-right: thin solid #f2f2f2;
             width: 100%;
+            border-spacing: 0;
+            height: inherit;
             thead {
               font-family: "ProximaNova-Semibold";
               color: #f2f2f2;
               font-size: 14px;
               text-align: left;
+              display: block;
+              width: 100%;
               th {
                 padding: 10px 0px;
+                min-width: 50px;
+
+                &:nth-child(2) {
+                  padding-left: 20px; 
+                }
+
+                &:nth-child(3) {
+                  padding-left: 40px; 
+                }
               }
             }
 
             tbody {
               font-size: 18px;
-
+              display: block;
+              width: 100%;
+              overflow: auto;
+              height: 266px;
               tr {
+
                 td {
                   font-family: "ProximaNova-Light";
                   color: #f2f2f2;
                   padding: 10px 0px;
                   min-width: 30px;
                   max-width: 200px;
+                  padding-left: 20px; 
    
                   &:nth-child(3) {
                    font-family: "ProximaNova-Semibold";
@@ -119,6 +205,10 @@
                    overflow: hidden;
                    text-overflow: ellipsis;
                   }
+
+                  &:nth-child(1) {
+                    text-align: center
+                   }
                  }
 
                  &:hover {
@@ -131,12 +221,8 @@
   
         .details {
           position: relative;
-          left: 50%;
-          margin-left: -43%;
-          top: 30px;
+          top: 20px;
           .profile {
-            display: flex;
-            align-items: center;
             figure{
               all: initial;
               width: 50px;
@@ -150,12 +236,35 @@
                 object-fit: cover;
               }
             }
+            h5 {
+              all: initial;
+              margin: 0 20px;
+              font-family: "ProximaNova-Light";
+              font-size: 11px;
+              color: #f2f2f2;
+              display: block;
+              text-align: center;
+              line-height: 3em;
+              font-style: italic
+            }
+            h4 {
+              all: initial;
+              margin: 0 20px;
+              font-family: "ProximaNova-Light";
+              font-size: 14px;
+              color: #f2f2f2;
+              display: block;
+              text-align: center;
+              line-height: 1.7em;
+            }
             h3 {
               all: initial;
               margin: 0 20px;
               font-family: "ProximaNova-Semibold";
               font-size: 18px;
               color: #f2f2f2;
+              display: block;
+              text-align: center;
             }
           }
   
@@ -163,11 +272,12 @@
             font-size: 14px;
             color: #f2f2f2;
             font-family: "ProximaNova-Light";
+            padding-left: 10px;
 
             ul {
               list-style: none;
               -webkit-padding-start: 10px;
-              padding-top: 20px;
+              padding-top: 5px;
               li {
                 padding: 7px;
 
