inputta aşağı ve yukarı ok, listede sağ ve sol ok engellendi. row hover hataları düzeltildi.

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -28,7 +28,7 @@
                </svg>
                
               </figure>
-              <input type="text" placeholder="Rehberde Ara…" #searchKey (keyup)="Search(searchKey.value)" />
+              <input type="text" class="searchKey" placeholder="Rehberde Ara…" #searchKey (keyup)="Search($event)" />
           </div>
 
 
@@ -42,7 +42,11 @@
                       <th>Ad Soyad</th>
                     </thead>
                     <tbody #list id="style-7">
-                      <tr *ngFor="let item of personel; let i = index" [attr.data-id]="item.dahili_id" [attr.data-index]="i + 1" [ngClass]="{ hover: i== 0 }">
+                      <tr *ngFor="let item of searchList; let i = index; let isLast = last;"
+                      [attr.data-id]="item.dahili_id"
+                      [attr.data-index]="i + 1"
+                      [ngClass]="{ hover: i== 0 }"
+                      [attr.ready]="last ? true : false">
                         <td>{{i + 1}}</td>
                         <td>{{item.unvan}}</td>
                         <td>{{item.adsoyad}}</td>
