--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -16,35 +16,35 @@
   opacity: 0.4;
 }
 
-#style-7::-webkit-scrollbar-track
+::ng-deep #style-7::-webkit-scrollbar-track
 {
 	// -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
 	background-color: transparent;
 	border-radius: 4px;
 }
 
-#style-7::-webkit-scrollbar
+::ng-deep #style-7::-webkit-scrollbar
 {
 	width: 4px;
   background-color:transparent;
 }
 
-#style-7::-webkit-scrollbar-thumb
+::ng-deep #style-7::-webkit-scrollbar-thumb
 {
 	border-radius: 4px;
 	background: #f2f2f2;
 }
 
-.hover {
+::ng-deep .hover {
   background:#358E8A;
 }
 
-.clearfix {
+::ng-deep .clearfix {
   clear: both;
   float: initial;
 }
 
-.container {
+::ng-deep .container {
   background: transparent;
   width: 700px;
   max-height: 400px;
@@ -133,6 +133,19 @@
           display: none;
         }
 
+        .search-institue {
+          position: absolute;
+          left: 80px;
+          font-family: "ProximaNova-Light";
+          font-style: italic;
+          font-size: 24px;
+          top:0;
+          color: #f2f2f2;
+          opacity: 0.4;
+          top:22px;
+          display: none;
+        }
+
         figure {
           all: unset;
           position: absolute;
@@ -183,24 +196,25 @@
               text-align: left;
               display: block;
               width: 100%;
+              padding-bottom: 10px;
               th {
-                padding: 10px 0px;
-                min-width: 50px;
 
                 &:nth-child(2) {
-                  padding-left: 20px; 
+                  display: inline-block;
+                  padding-left: 46px;
                 }
 
                 &:nth-child(3) {
-                  padding-left: 40px; 
+                  display: inline-block;
+                  padding-left: 82px;
                 }
               }
             }
 
             tbody {
-              font-size: 18px;
+              font-size: 14px;
               display: block;
-              width: 100%;
+              /* width: 100%; */
               overflow: auto;
               height: 266px;
               tr {
@@ -209,19 +223,28 @@
                   font-family: "ProximaNova-Light";
                   color: #f2f2f2;
                   padding: 10px 0px;
-                  min-width: 30px;
-                  max-width: 200px;
-                  padding-left: 20px; 
+                  display: inline-block;
+                  padding-left: 2%;
+
+
+                  &:nth-child(2) {
+                    white-space: nowrap;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
+                    width: 35%;
+                   }
    
                   &:nth-child(3) {
                    font-family: "ProximaNova-Semibold";
                    white-space: nowrap;
                    overflow: hidden;
                    text-overflow: ellipsis;
+                   width: 45%
                   }
 
                   &:nth-child(1) {
-                    text-align: center
+                    text-align: center;
+                    width: 10%;
                    }
                  }
 
@@ -292,13 +315,33 @@
               list-style: none;
               -webkit-padding-start: 10px;
               padding-top: 5px;
+              -webkit-margin-end: 10px;
               li {
-                padding: 7px;
+                padding: 7px 0;
 
                 i {
                   color: #F6D7A1;
-                  font-size: 16px;
+                  font-size: 14px;
                   margin: 0 10px 0 0;
+                  display: block;
+                  float: left;
+                  padding-top: 3px;
+
+                  &.fa-university {
+                    font-size: 16px;
+                    padding-top: 1px;
+                  }
+                }
+
+                span {
+                  line-height: 1.6em;
+                  display: block;
+                  width: 90%;
+                  float: left;
+
+                  span {
+                    all:unset;
+                  }
                 }
               }
             }
