--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -6,29 +6,28 @@
               <figure>
                   <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                   viewBox="0 0 350 500" width="30" style="enable-background:new 0 0 350 500;" xml:space="preserve">
-               <style type="text/css">
-                 .st0{fill:#F2F2F2;}
-               </style>
-               <g>
-                 <path class="st0" d="M24.9,272.7c-4.7-6.8-7.9-16.5-5.7-24.7c1.6-6.3,5.2-9.9,8.5-12.5c0,0-6.6,26.2,84.3,28.8
-                   c34.3,1,81.8-5.3,100.9-2.4c39.7,6,45.1,54.4-2.8,78.4c0,0,18.5-20.3,12.6-33.5c-7.4-16.2-30.5-9-107.4-8.5
-                   C67.4,298.6,34.4,286.4,24.9,272.7L24.9,272.7z"/>
-                 <path class="st0" d="M81.3,267.6c0,0-6.9,44.5,2.2,84c7.4,42.2,46.6,60.2,46.6,60.2l-0.1,62.1l6.3,0.2l5.5-132.6
-                   c0,0,51.2-21.9,56.6-79.2l1.4-27.3c0,0-57.1,28.1-56.5,74.7l7.7-59.3l-8,15.8l-17-33l0.5,45.8c-0.1,21.1,2.6,84.6,3.6,95.5
-                   C130.1,374.5,126.3,315.2,81.3,267.6L81.3,267.6z"/>
-                 <path class="st0" d="M336.9,427c0,0-22.5,13-44.4-5.5c-21.9-18.5-55.3-60.7-81.1-69.8c-20.5-7.2-53.6-2.1-57.1,33.4
-                   c0,0,8.5-14.9,33.7-12c13.7,1.6,23,9.9,62.8,54C290.7,471.2,329.2,477.3,336.9,427L336.9,427z"/>
-                 <path class="st0" d="M339.7,25.8c0,0-16.5,36.9-86.3,26.8C202.2,45.2,117.7,19,63,25.5c-58.5,7-75.1,67.7-41,92.6
-                   c0,0-12.2-19.7,1.1-34.1c14.1-15.3,56.9-28.9,156-7.4C301.5,103.2,356.1,96.2,339.7,25.8L339.7,25.8z"/>
-                 <path class="st0" d="M340.1,179.6c0,0-16.5,36.9-86.3,26.8c-51.1-7.4-135.6-33.6-190.3-27.1c-58.5,7-75.1,67.7-41,92.6
-                   c0,0-12.2-19.7,1.1-34.1c14.1-15.3,56.9-28.9,156-7.4C301.9,257,356.5,250,340.1,179.6L340.1,179.6z"/>
-                 <path class="st0" d="M339.7,103c0,0-16.5,36.9-86.3,26.8c-51.1-7.4-135.6-33.6-190.3-27.1c-58.5,7-74.2,67.1-40.1,91.9
-                   c0,0-13.2-19.1,0.1-33.5c14.1-15.3,56.9-28.9,156-7.4C301.5,180.4,356.1,173.4,339.7,103L339.7,103z"/>
-               </g>
-               </svg>
-               
+                    <style type="text/css">
+                      .st0{fill:#F2F2F2;}
+                    </style>
+                    <g>
+                      <path class="st0" d="M24.9,272.7c-4.7-6.8-7.9-16.5-5.7-24.7c1.6-6.3,5.2-9.9,8.5-12.5c0,0-6.6,26.2,84.3,28.8
+                        c34.3,1,81.8-5.3,100.9-2.4c39.7,6,45.1,54.4-2.8,78.4c0,0,18.5-20.3,12.6-33.5c-7.4-16.2-30.5-9-107.4-8.5
+                        C67.4,298.6,34.4,286.4,24.9,272.7L24.9,272.7z"/>
+                      <path class="st0" d="M81.3,267.6c0,0-6.9,44.5,2.2,84c7.4,42.2,46.6,60.2,46.6,60.2l-0.1,62.1l6.3,0.2l5.5-132.6
+                        c0,0,51.2-21.9,56.6-79.2l1.4-27.3c0,0-57.1,28.1-56.5,74.7l7.7-59.3l-8,15.8l-17-33l0.5,45.8c-0.1,21.1,2.6,84.6,3.6,95.5
+                        C130.1,374.5,126.3,315.2,81.3,267.6L81.3,267.6z"/>
+                      <path class="st0" d="M336.9,427c0,0-22.5,13-44.4-5.5c-21.9-18.5-55.3-60.7-81.1-69.8c-20.5-7.2-53.6-2.1-57.1,33.4
+                        c0,0,8.5-14.9,33.7-12c13.7,1.6,23,9.9,62.8,54C290.7,471.2,329.2,477.3,336.9,427L336.9,427z"/>
+                      <path class="st0" d="M339.7,25.8c0,0-16.5,36.9-86.3,26.8C202.2,45.2,117.7,19,63,25.5c-58.5,7-75.1,67.7-41,92.6
+                        c0,0-12.2-19.7,1.1-34.1c14.1-15.3,56.9-28.9,156-7.4C301.5,103.2,356.1,96.2,339.7,25.8L339.7,25.8z"/>
+                      <path class="st0" d="M340.1,179.6c0,0-16.5,36.9-86.3,26.8c-51.1-7.4-135.6-33.6-190.3-27.1c-58.5,7-75.1,67.7-41,92.6
+                        c0,0-12.2-19.7,1.1-34.1c14.1-15.3,56.9-28.9,156-7.4C301.9,257,356.5,250,340.1,179.6L340.1,179.6z"/>
+                      <path class="st0" d="M339.7,103c0,0-16.5,36.9-86.3,26.8c-51.1-7.4-135.6-33.6-190.3-27.1c-58.5,7-74.2,67.1-40.1,91.9
+                        c0,0-13.2-19.1,0.1-33.5c14.1-15.3,56.9-28.9,156-7.4C301.5,180.4,356.1,173.4,339.7,103L339.7,103z"/>
+                    </g>
+                  </svg>
               </figure>
-              <input type="text" minlength="3" class="searchKey" placeholder="Rehberde Ara…" #searchKey (keyup)="Search($event)" /> <span #noResult class="no-result"> &minus;&minus;&minus; Sonuç Yok</span><span #searchInstitue class="search-institue"> Birime Göre Ara:</span> 
+              <input type="text" minlength="3" class="searchKey" placeholder="Search in Phone Directory…" #searchKey (keyup)="Search($event)" /> <span #noResult class="no-result"> &minus;&minus;&minus; Sonuç Yok</span><span #searchInstitue class="search-institue">Search by Department:</span> 
           </div>
 
 
@@ -38,8 +37,8 @@
                   <table #table>
                     <thead>
                       <th></th>
-                      <th>Ünvan</th>
-                      <th>Ad Soyad</th>
+                      <th>Title</th>
+                      <th>Name Surname</th>
                     </thead>
                     <tbody #list id="style-7">
                       <tr *ngFor="let item of searchList; let i = index; let isLast = last;"
